--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
 <body>
     <div class="main-content">
     {{>header}}
-    <p>This site was created by Sandro Moralishvili. it uses data from mapbox.com and darksky.net !</p>
+    <p>This site was created by Sandro Moralishvili. it uses data from mapbox.com and weatherstak.com !</p>
     <img class="portrait" src="/img/robot.jpg">
     </div>
 
